Refactor chess-api: Remove StalemateMetrics and introduce functional classes
- Deleted StalemateMetrics class to streamline the codebase.
- Added new functional classes: BishopGenerator, BitboardGenerator, BlockingList, CastleInfo, CheckMetrics, CheckmateMetrics, CollectionUtil, Container, Factory, Generator, IndexedValue, InternalUtil, KingGenerator, KingMoves, KnightGenerator, LackOfMaterialMetrics, Logger, MatrixUtil, Move, MovesInfo, PGNHandler, PawnGenerator, PawnMoves, Position, QueenGenerator, RegularPieceMoves, RookGenerator, StalemateMetrics, Tuple, VisibleMetrics, and ZobristHasher.
- Created test classes for CheckMetrics and Generator to ensure functionality.